--- a/src/views/layouts/main.handlebars
+++ b/src/views/layouts/main.handlebars
@@ -40,26 +40,20 @@
            Bienvenido(a), {{user.first_name}} {{user.role}}
           </a>
           <ul class="dropdown-menu dropdown-menu-end bg-success" aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item" href="/users">Lista Usuario - Sistema</a></li>
+            <li><a class="dropdown-item" href="/profile">Editar Perfil</a></li>
             <li><hr class="dropdown-divider"></li>
              <li><a class="dropdown-item" href="/send-email">Resetear Clave</a></li>
-              <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="/profile">Mostrar Perfil</a></li>
             <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="auth/logout">Cerrar Sesión</a></li>
+            <li><a class="dropdown-item" href="auth/logout/{{user.id}}">Cerrar Sesión</a></li>
           </ul>
         </li>
       </ul>
     </div>
   </div>
 </nav>
-
-
     <div class="container">
     {{{body}}} 
     </div> 
-
-
 </script>
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" 
