--- a/src/views/layouts/main.handlebars
+++ b/src/views/layouts/main.handlebars
@@ -44,6 +44,8 @@
             <li><hr class="dropdown-divider"></li>
              <li><a class="dropdown-item" href="/send-email">Resetear Clave</a></li>
             <li><hr class="dropdown-divider"></li>
+            <li><a class="dropdown-item" href="/users">Lista de Usuarios</a></li>
+            <li><hr class="dropdown-divider"></li>
             <li><a class="dropdown-item" href="auth/logout/{{user.id}}">Cerrar Sesión</a></li>
           </ul>
         </li>
