--- a/src/views/reset-password.handlebars
+++ b/src/views/reset-password.handlebars
@@ -28,57 +28,10 @@
         </div>
     </div>
 </div>
-
-
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" 
 integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-<script>
-    document.addEventListener('DOMContentLoaded', function () {
-    const resetPasswordForm = document.getElementById('resetPasswordForm');
-    resetPasswordForm.addEventListener('submit', async function (event) {
-        event.preventDefault();
-        const newPassword = document.getElementById('newPassword').value;
-        const token = getTokenFromURL();
-        try {
-            const response = await fetch('/reset-password', {
-                method: 'POST',
-                headers: {
-                    'Content-Type': 'application/json'
-                },
-                body: JSON.stringify({token, newPassword })
-            });
-
-            if (response.ok) {
-                await Swal.fire({
-                    icon: 'success',
-                    title: 'Contraseña restablecida',
-                    text: 'Tu contraseña ha sido cambiada exitosamente.'
-                });
-                window.location.href = '/login';
-            } else {
-                const errorData = await response.json();
-                await Swal.fire({
-                    icon: 'error',
-                    title: 'Error',
-                    text: errorData.error || 'Ha ocurrido un error al cambiar la contraseña. Por favor, inténtalo de nuevo más tarde.'
-                });
-            }
-        } catch (error) {
-            console.error('Error:', error);
-            await Swal.fire({
-                icon: 'error',
-                title: 'Error',
-                text: 'Ha ocurrido un error al procesar la solicitud. Por favor, inténtalo de nuevo más tarde.'
-            });
-        }
-    });
-});
-function getTokenFromURL() {
-    const urlParams = new URLSearchParams(window.location.search);
-    return urlParams.get('token');
-}
-</script>
+<script src="/js/reset-password.js"></script>  
 </body>
 </html>
