--- a/src/views/send-email.handlebars
+++ b/src/views/send-email.handlebars
@@ -22,6 +22,7 @@
                             <input type="email" class="form-control" id="email" name="email" required>
                         </div>
                         <button type="submit" class="btn btn-success"><i class="bi bi-envelope"></i> Enviar</button>
+                        <a  class="btn btn-danger" href="/home">Atrás</a>
                     </form>
                 </div>
             </div>
@@ -32,50 +33,6 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" 
 integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-<script>
-    document.addEventListener('DOMContentLoaded', function () {
-    const resetPasswordForm = document.getElementById('resetPasswordForm');
-
-    resetPasswordForm.addEventListener('submit', async function (event) {
-        event.preventDefault();
-
-        const email = document.getElementById('email').value;
-
-        try {
-            const response = await fetch('/send-reset-email', {
-                method: 'POST',
-                headers: {
-                    'Content-Type': 'application/json'
-                },
-                body: JSON.stringify({ email })
-            });
-
-            if (response.ok) {
-                await Swal.fire({
-                    icon: 'success',
-                    title: 'Correo enviado',
-                    text: 'Se ha enviado un correo electrónico para restablecer la contraseña.'
-                });
-                window.location.href = '/login'; 
-            } else {
-                const errorData = await response.json();
-                await Swal.fire({
-                    icon: 'error',
-                    title: 'Error',
-                    text: errorData.error
-                });
-            }
-        } catch (error) {
-            console.error('Error:', error);
-            await Swal.fire({
-                icon: 'error',
-                title: 'Error',
-                text: 'Ha ocurrido un error al procesar la solicitud. Por favor, inténtalo de nuevo más tarde.'
-            });
-        }
-    });
-});
-
-</script>
+<script src="/js/send-email.js"></script>  
 </body>
 </html>
